# itzybz

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml
include/itzy/: debug.h  math.h  sys.h  types.h
src/: debug.c  sys.c
tests/: CMakeLists.txt  strbuff.c  vecs.c
